--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,8 @@
 <head>
     <meta charset="utf-8">
     <title>武汉人物</title>
-    <script type="text/javascript" src="../echarts/echarts-master/dist/echarts.js"></script>
-    <script type="text/javascript" src="../echarts/echarts-master/test/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="./echarts/echarts-master/dist/echarts.js"></script>
+    <script type="text/javascript" src="./echarts/echarts-master/test/lib/jquery.min.js"></script>
 </head>
 <body>
     <div id="wuhan_people" style="width: 100%; height: 1024px;"></div>
